--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "nodemon",
     "build": "rimraf ./build && tsc",
+    "test:unit": "ENV_FILE=./config/.env.test jest",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,9 +15,13 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
+    "@types/jest": "^29.1.2",
     "@types/node": "^18.8.4",
+    "@types/supertest": "^2.0.12",
+    "jest": "^29.1.2",
     "nodemon": "^2.0.20",
     "rimraf": "^3.0.2",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
@@ -33,6 +38,7 @@
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "knex": "^2.3.0",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "supertest": "^6.3.0"
   }
 }
