--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon",
-    "build": "rimraf ./build && tsc",
+    "dev": "nodemon",
+    "start": "node build/app.js",
+    "build": "rimraf ./build && tsc --outDir build && knex --knexfile build/knexfile.js migrate:latest",
     "test:unit": "ENV_FILE=./config/.env.test jest",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "knex:migrate": "knex --knexfile knexfile.ts migrate:latest",
+    "knex:rollback": "knex --knexfile knexfile.ts migrate:rollback"
   },
   "keywords": [],
   "author": "",
